Rivede JavaProcessClass