@@ -1,14 +1,9 @@
 package org.example.controller;
 
-import com.github.javaparser.ParseProblemException;
-import com.github.javaparser.StaticJavaParser;
-import com.github.javaparser.ast.CompilationUnit;
-import com.github.javaparser.ast.body.MethodDeclaration;
-import com.github.javaparser.ast.expr.MethodCallExpr;
 import org.eclipse.jgit.api.Git;
 import org.eclipse.jgit.api.ListBranchCommand;
 import org.eclipse.jgit.api.ResetCommand;
-import org.eclipse.jgit.api.errors.*;
+import org.eclipse.jgit.api.errors.GitAPIException;
 import org.eclipse.jgit.diff.DiffEntry;
 import org.eclipse.jgit.diff.DiffFormatter;
 import org.eclipse.jgit.diff.Edit;
@@ -17,109 +12,63 @@ import org.eclipse.jgit.internal.storage.file.FileRepository;
 import org.eclipse.jgit.lib.*;
 import org.eclipse.jgit.revwalk.RevCommit;
 import org.eclipse.jgit.revwalk.RevTree;
-import org.eclipse.jgit.treewalk.CanonicalTreeParser;
 import org.eclipse.jgit.treewalk.TreeWalk;
-import org.eclipse.jgit.treewalk.filter.PathSuffixFilter;
 import org.eclipse.jgit.util.io.DisabledOutputStream;
 import org.example.logging.SeLogger;
 import org.example.model.*;
-import org.example.utilities.CodeSmellParser;
-import org.example.utilities.ConfigLoader;
-import org.example.utilities.JavaParserUtil;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 
-import java.io.*;
+import java.io.File;
+import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.text.SimpleDateFormat;
+import java.time.Instant;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.util.*;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Supplier;
+import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-
-import static org.example.utilities.Sink.storeMaxCodeSmells;
 
 /**
  * Class controller responsible to link Jira-Ticket with GitHub commits and fill all the metadata
  */
 public class GitInjection {
 
+    public static final String LOCAL_DATE_FORMAT = "yyyy-MM-dd";
     private static final String TEMP = ".temp" + File.separator;
     private static final String GIT = File.separator + ".git";
     public static final String PMD_ANALYSIS = "pmdAnalysis";
     public static final String RELEASE = "release";
     public static final String TEST = "Test";
     public static final String JAVA_EXTENTION = ".java";
-    private static final String SYS_PMD_HOME = "";
+    private static final String SYS_PMD_HOME = "PMD_HOME";
+
     private final String repoPath;
     private final String lastBranch;
-    private final double limitPercentage;
 
     private List<Ticket> tickets;
     private final List<Release> releases;
     protected final Git localGithub;
     private final Repository repository;
 
-    public void setTickets(List<Ticket> tickets) {
-        this.tickets = tickets;
-    }
-
-    public void setCommits(List<Commit> commits) {
-        this.commits = commits;
-    }
-
     private List<Commit> commits;
-    private ArrayList<Commit> commitsWithIssues;
+    private List<Commit> commitsWithIssues;
 
+    private List<JavaClass> javaClasses;
+    private Map<Release, List<JavaClass>> javaClassPerRelease = new LinkedHashMap<>();
+    public final Map<RevCommit, List<String>> modifiedClassesForCommit;
 
-    public List<Ticket> getTickets() {
-        return tickets;
-    }
-
-    public List<Release> getReleases() {
-        return releases;
-    }
-
-    public Repository getRepository() {
-        return repository;
-    }
-
-    public List<Commit> getCommits() {
-        return commits;
-    }
-
-    public Map<Release, List<JavaClass>> getJavaClassPerRelease() {
-        return javaClassPerRelease;
-    }
-
-    public String getProject() {
-        return project;
-    }
-
-    public Logger getLogger() {
-        return logger;
-    }
-
-    public String getLogName() {
-        return logName;
-    }
-
-    private static final String LOCAL_DATE_FORMAT = "yyyy-MM-dd";
-
-    private ArrayList<JavaClass> javaClasses;
-    private final Map<RevCommit, List<String>> modifiedClassesForCommit;
-    private Map<Release, List<JavaClass>> javaClassPerRelease = null;
     private final String project;
     private final Logger logger = SeLogger.getInstance().getLogger();
     private final String logName;
 
     /**
-     * Constructor of GiraInjection
+     * Constructor of GitInjection
      *
      * @param targetName  the project target
      * @param targetUrl   the GitHub repository URL
@@ -137,119 +86,117 @@ public class GitInjection {
             repository = new FileRepository(repoPath + GIT);
             localGithub = new Git(repository);
         }
-        this.releases = releaseList;
-        this.tickets = null;
+        this.releases = releaseList != null ? releaseList : new ArrayList<>();
+        this.tickets = new ArrayList<>();
+        this.commits = new ArrayList<>();
+        this.commitsWithIssues = new ArrayList<>();
+        this.javaClasses = new ArrayList<>();
         this.modifiedClassesForCommit = new HashMap<>();
         this.logName = this.getClass().getSimpleName() + "#" + targetName;
-        this.lastBranch = repository.getBranch();
-        // Legge dal file config.properties
-        this.limitPercentage = ConfigLoader.getDouble("cut.percentage", 1.0);
-        infoLog("setup percentage for releases: " + limitPercentage);
-    }
-
-    private void infoLog(String msg) {
-        String info = logName + "[" + Thread.currentThread().getStackTrace()[2].getMethodName() + "]: " + msg;
-        logger.info(info);
-    }
-
-    private void errorLog(String msg) {
-        String info = logName + "[" + Thread.currentThread().getStackTrace()[2].getMethodName() + "]: " + msg;
-        logger.severe(info);
+        String branch = null;
+        try {
+            branch = repository.getBranch();
+        } catch (Exception ignored) {
+        }
+        this.lastBranch = branch;
     }
 
     /**
      * Used to inject commits in the revCommitList
      */
     public void injectCommits() throws GitAPIException, IOException {
-        List<RevCommit> revCommits = new ArrayList<>();
-        List<Ref> allBranch = localGithub.branchList()
+        Set<RevCommit> revCommitSet = new HashSet<>();
+        List<Ref> allBranches = localGithub.branchList()
                 .setListMode(ListBranchCommand.ListMode.ALL)
                 .call();
 
-        for (Ref branch : allBranch) {
+        for (Ref branch : allBranches) {
             Iterable<RevCommit> branchCommits = localGithub.log()
                     .add(this.repository.resolve(branch.getName()))
                     .call();
             for (RevCommit branchCommit : branchCommits) {
-                if (!revCommits.contains(branchCommit)) {
-                    revCommits.add(branchCommit);
-                }
+                revCommitSet.add(branchCommit); // HashSet evita duplicati
             }
         }
 
         // Filtra commit senza committer o senza data
-        revCommits = revCommits.stream()
+        List<RevCommit> revCommits = revCommitSet.stream()
                 .filter(rc -> rc.getCommitterIdent() != null)
                 .filter(rc -> rc.getCommitterIdent().getWhenAsInstant() != null)
-                .collect(Collectors.toList());
-
-        revCommits.sort(Comparator.comparing(rc -> Date.from(rc.getCommitterIdent().getWhenAsInstant())));
+                .sorted(Comparator.comparing(rc -> rc.getCommitterIdent().getWhenAsInstant()))
+                .toList();
 
         this.commits = new ArrayList<>();
 
         for (RevCommit revCommit : revCommits) {
-            SimpleDateFormat formatter = new SimpleDateFormat(GitInjection.LOCAL_DATE_FORMAT);
-            LocalDate commitDate = LocalDate.parse(formatter.format(Date.from(
-                    revCommit.getCommitterIdent().getWhenAsInstant())));
-            LocalDate lowerBoundDate = LocalDate.parse(formatter.format(new Date(0)));
+            Instant commitInstant = revCommit.getCommitterIdent().getWhenAsInstant();
+            LocalDateTime commitDateTime = LocalDateTime.ofInstant(commitInstant, ZoneId.systemDefault());
 
-            for (Release release : this.releases) {
-                LocalDate dateOfRelease = release.getReleaseDate();
-                if (commitDate.isAfter(lowerBoundDate) && !commitDate.isAfter(dateOfRelease)) {
-                    Commit newCommit = new Commit(revCommit, release);
-                    this.commits.add(newCommit);
-                    release.addCommit(newCommit);
-                }
-                lowerBoundDate = dateOfRelease;
+            // Trova la release giusta con ricerca binaria
+            Release targetRelease = findReleaseForCommit(commitDateTime, this.releases);
+            if (targetRelease != null) {
+                Commit newCommit = new Commit(revCommit, targetRelease);
+                this.commits.add(newCommit);
+                targetRelease.addCommit(newCommit);
             }
         }
 
-        this.releases.removeIf(release -> release.getCommitList().isEmpty());
+        // Rimuove release senza commit
+        this.releases.removeIf(release -> release.getCommitList() == null || release.getCommitList().isEmpty());
 
+        // Riassegna ID progressivi
         int i = 0;
         for (Release release : this.releases) {
             release.setId(++i);
         }
 
-        this.commits.sort(Comparator.comparing(o -> Date.from(o.getRevCommit().getCommitterIdent().getWhenAsInstant())));
+        // Ordina i commit cronologicamente
+        this.commits.sort(Comparator.comparing(c -> c.getRevCommit().getCommitterIdent().getWhenAsInstant()));
+
+        logInfo(() -> "injectCommits finished: commits=" + this.commits.size() + ", releases=" + this.releases.size());
     }
 
+    /**
+     * Cerca nei messaggi dei commit riferimenti a ticket e collega ticket<->commit
+     */
     public void preprocessCommitsWithIssue() {
+
+        //lista di commit filtrati
         this.commitsWithIssues = new ArrayList<>();
 
-        for (Commit commit : this.commits) {
+        for (Commit commit : Optional.ofNullable(this.commits).orElse(Collections.emptyList())) {
             String fullMessageRaw = null;
+            //per ogni commit, viene recuperato il messaggio completo associato
             try {
-                fullMessageRaw = (commit.getRevCommit() != null) ? commit.getRevCommit().getFullMessage() : null;
+                if (commit.getRevCommit() != null) fullMessageRaw = commit.getRevCommit().getFullMessage();
             } catch (Exception e) {
-                logger.warning("Error getting fullMessage for commit " + commit + ": " + e.getMessage());
+                logWarning(() -> "Error getting fullMessage for commit: " + e.getMessage());
             }
 
             String fullMessage = Optional.ofNullable(fullMessageRaw).orElse("");
             if (fullMessageRaw == null) {
-                logger.warning("Found null fullMessage in commit: " + commit);
+                logWarning(() -> "Found null fullMessage in commit");
             }
 
-            for (Ticket ticket : this.tickets) {
+            for (Ticket ticket : Optional.ofNullable(this.tickets).orElse(Collections.emptyList())) {
                 String ticketKeyRaw = null;
+                //per ogni ticket, invece, viene recuperata la ticket key
                 try {
                     ticketKeyRaw = ticket.getTicketKey();
                 } catch (Exception e) {
-                    logger.warning("Error getting ticketKey for ticket " + ticket + ": " + e.getMessage());
+                    logWarning(() -> "Error getting ticketKey for ticket: " + e.getMessage());
                 }
 
-                String ticketKey = Optional.ofNullable(ticketKeyRaw)
-                        .map(String::trim)
-                        .orElse("");
+                String ticketKey = Optional.ofNullable(ticketKeyRaw).map(String::trim).orElse("");
                 if (ticketKeyRaw == null) {
-                    logger.warning("Found null ticketKey in ticket: " + ticket);
+                    logWarning(() -> "Found null ticketKey in ticket");
                 }
 
                 if (ticketKey.isEmpty()) continue;
 
-                // regex per match esatto come parola
+                // regex per match esatto come parola --> controlliamo se il commit ha al suo interno la ticket_key
                 if (Pattern.compile("\\b" + Pattern.quote(ticketKey) + "\\b").matcher(fullMessage).find()) {
-                    this.commitsWithIssues.add(commit);
+                    this.commitsWithIssues.add(commit); //se presente lo aggiungo
                     ticket.addCommit(commit);
                     commit.setTicket(ticket);
                 }
@@ -257,433 +204,73 @@ public class GitInjection {
         }
 
         // Rimuove ticket senza commit associati
-        this.tickets.removeIf(ticket -> ticket.getCommitList().isEmpty());
+        if (this.tickets != null) {
+            this.tickets.removeIf(ticket -> ticket.getCommitList() == null || ticket.getCommitList().isEmpty());
+        }
+        logInfo(() -> "preprocessCommitsWithIssue finished: commitsWithIssues=" + this.commitsWithIssues.size());
     }
 
     public void closeRepo() {
-        this.localGithub.getRepository().close();
+        try {
+            this.localGithub.getRepository().close();
+        } catch (Exception e) {
+            logWarning(() -> "Error closing repository: " + e.getMessage());
+        }
     }
 
     /**
-     * Returning the ClassName and Body
-     *
-     * @param revCommit the commit in GitHub repo
-     * @return The class name touched in that commit and class Body
+     * Delegates heavy Java-class preprocessing to PreProcessJavaClass, then updates local maps
+     */
+    public void preprocessJavaClasses() throws IOException {
+        PreProcessJavaClass pre = new PreProcessJavaClass(
+                this.repository, this.localGithub, this.releases,
+                this.commits, this.tickets, this.project, this.repoPath
+        );
+
+        pre.setLastBranch(this.lastBranch);
+        pre.preprocessJavaClasses();
+
+        // adopt results
+        this.javaClasses = Optional.ofNullable(pre.getJavaClasses()).orElse(new ArrayList<>());
+        this.commitsWithIssues = Optional.ofNullable(pre.getCommitsWithIssues()).orElse(new ArrayList<>());
+
+        // rebuild javaClassPerRelease map here (grouping)
+        this.javaClassPerRelease = new LinkedHashMap<>();
+        for (JavaClass jc : this.javaClasses) {
+            this.javaClassPerRelease.computeIfAbsent(jc.getRelease(), k -> new ArrayList<>()).add(jc);
+        }
+        logInfo(() -> "preprocessJavaClasses finished: javaClasses=" + this.javaClasses.size());
+    }
+
+    /**
+     * Returning the ClassName and Body (utility kept for backward compatibility)
      */
     public static @NotNull Map<String, String> getAllClassesNameAndContent(@NotNull RevCommit revCommit,
                                                                            Repository repository) throws IOException {
         Map<String, String> allClasses = new HashMap<>();
         RevTree tree = revCommit.getTree();
-        TreeWalk treeWalk = new TreeWalk(repository);
-        treeWalk.addTree(tree);
-        treeWalk.setRecursive(true);
-        while (treeWalk.next()) {
-            if (treeWalk.getPathString().contains(JAVA_EXTENTION) && !treeWalk.getPathString().contains("/test/")) {
-                allClasses.put(treeWalk.getPathString(), new String(repository.open(treeWalk.getObjectId(0))
-                        .getBytes(), StandardCharsets.UTF_8));
+        try (TreeWalk treeWalk = new TreeWalk(repository)) {
+            treeWalk.addTree(tree);
+            treeWalk.setRecursive(true);
+            while (treeWalk.next()) {
+                String path = treeWalk.getPathString();
+                if (path.contains(JAVA_EXTENTION) && !path.contains("/test/")) {
+                    allClasses.put(path, new String(repository.open(treeWalk.getObjectId(0)).getBytes(), StandardCharsets.UTF_8));
+                }
             }
         }
-        treeWalk.close();
         return allClasses;
     }
 
-    /**
-     * Preparing the java Classes linking commit and the Release
-     *
-     * @see JavaClass
-     */
-    public void preprocessJavaClasses() throws IOException {
-        this.javaClasses = new ArrayList<>();
-        List<Commit> latestCommits = new ArrayList<>();
-
-        for (int i = 0; i < this.releases.size(); i++) {
-            List<Commit> tempCommits = new ArrayList<>(this.commits);
-
-            int finalI = i;
-            tempCommits.removeIf(commit -> (commit.getRelease().getId() != finalI));
-            if (tempCommits.isEmpty()) {
-                continue;
-            }
-
-            latestCommits.add(tempCommits.getLast());
-        }
-
-        latestCommits.sort(Comparator.comparing(commit -> Date.from(
-                commit.getRevCommit().getCommitterIdent().getWhenAsInstant())));
-
-        for (Commit commit : latestCommits) {
-            Map<String, String> nameAndClassContent = getAllClassesNameAndContent(commit.getRevCommit(),
-                    this.repository);
-            nameAndClassContent.forEach(
-                    (name, content) -> {
-                        if (!name.contains(TEST)) {
-                            javaClasses.add(new JavaClass(name, content,
-                                    commit.getRelease(), true));
-                        }
-                    }
-            );
-            this.javaClasses.removeIf(javaClass -> !javaClass.isHasMap());
-
-        }
-
-        this.fillClassesInfo();
-        infoLog("fillClassInfo");
-        this.checkUpdateInClassCommitted();
-        infoLog("checkUpdateCommitted");
-        this.javaClasses.sort(Comparator.comparing(JavaClass::getName));
-        this.parseJavaClassPerRelease();
-        infoLog("parsingClassPerRelease: release-size=" + this.javaClassPerRelease.size());
-        logBugPercentage();
-        // now cutting the 66% of release to do the analysis
-        this.cutJavaClasses();
-        long start = System.currentTimeMillis();
-        infoLog("start check-Age");
-        this.checkMethodAge();
-        long end = System.currentTimeMillis();
-        infoLog("done check Age took=" + ((end - start) / 1e3)  + "s");
-        infoLog("start check usage");
-        start = System.currentTimeMillis();
-        this.checkMethodUsage();
-        end = System.currentTimeMillis();
-        infoLog("done check Usage took=" + ((end - start) / 1e3)  + "s");
-        infoLog("start updateMethodPerClassCommits");
-        start = System.currentTimeMillis();
-        this.updateMethodPerClassCommits();
-        end = System.currentTimeMillis();
-        infoLog("done updateMethodPerClassCommits took=" + ((end - start) / 1e3)  + "s");
-        infoLog("start check code smells");
-        start = System.currentTimeMillis();
-        this.setupCodeSmellPMD();
-        end = System.currentTimeMillis();
-        CodeSmellParser.extractCodeSmell(this.javaClassPerRelease, this.project);
-        infoLog("done check code smells took=" + ((end - start) / 1e3)  + "s");
-        this.foundMostCodeSmells();
-
-
-    }
-
-    private void foundMostCodeSmells() {
-        AtomicInteger num = new AtomicInteger(0);
-        AtomicInteger globalMax = new AtomicInteger(-1);
-        Release last = this.javaClassPerRelease.keySet().stream()
-                .sorted(Comparator.comparing(Release::getId)).toList().getLast();
-        this.javaClassPerRelease.get(last).forEach(
-                jc -> {
-                    int max = jc.getMethodsMetrics().values().stream().filter(value -> (value.getStatementCount() != 1
-                                    && value.isBug())
-                            )
-                            .mapToInt(
-                                    MethodMetrics::getNumberOfCodeSmells
-                            ).max().orElse(0);
-                    if (max > globalMax.get()) {
-                        globalMax.set(max);
-                    }
-                }
-        );
-        this.javaClassPerRelease.get(last).forEach(
-                jc -> jc.getMethodsMetrics().entrySet().stream().filter(entry ->
-                                (entry.getValue().getStatementCount() != 1) && entry.getValue().isBug())
-                        .filter(
-                                entry -> entry.getValue().getNumberOfCodeSmells() == globalMax.get()
-                        ).forEach(
-                                entry -> {
-
-                                    try {
-                                        storeMaxCodeSmells(last.getId() + "smell-"+globalMax.get()+"-"
-                                                + this.project + (num.incrementAndGet()), jc, entry);
-                                    } catch (IOException e) {
-                                        errorLog(e.getMessage());
-                                    }
-
-                                    extractPreviousMethod(jc, entry, last, globalMax, num);
-
-                                }
-                        ));
-
-    }
-
-    private void extractPreviousMethod(JavaClass jc, Map.Entry<String, MethodMetrics> entry, Release last, AtomicInteger globalMax, AtomicInteger num) {
-        // Trova release precedente
-        Optional<Release> previousReleaseOpt = this.javaClassPerRelease.keySet().stream()
-                .filter(r -> r.getId() == last.getId() - 1)
-                .findFirst();
-
-        if (previousReleaseOpt.isPresent()) {
-            Release previousRelease = previousReleaseOpt.get();
-
-            // Cerca la JavaClass con lo stesso nome
-            Optional<JavaClass> matchingPrevClassOpt = this.javaClassPerRelease.get(previousRelease).stream()
-                    .filter(prevClass -> prevClass.getName().equals(jc.getName()))
-                    .findFirst();
-
-            if (matchingPrevClassOpt.isPresent()) {
-                JavaClass prevClass = matchingPrevClassOpt.get();
-
-                // Cerca il metodo corrispondente
-                if (prevClass.getMethodsMetrics().containsKey(entry.getKey())) {
-                    Map.Entry<String, MethodMetrics> prevEntry =
-                            Map.entry(entry.getKey(),
-                                    prevClass.getMethodsMetrics().get(entry.getKey()));
-
-                    // Store info for previous release
-                    try {
-                        storeMaxCodeSmells(
-                                previousRelease.getId() + "-prev-smell-" + globalMax.get() +
-                                        "-" + this.project + num.get(),
-                                prevClass,
-                                prevEntry
-                        );
-                    } catch (IOException e) {
-                        errorLog(e.getMessage());
-                    }
-                }
-            }
-        }
-    }
-
-
-    private void cutJavaClasses() {
-        int limit = (int) (this.javaClassPerRelease.size() * limitPercentage);
-        infoLog("LIMIT: " + limit + " total releases size=" + this.javaClassPerRelease.size() +
-                " Java classes size=" + this.javaClasses.size());
-        javaClassPerRelease.entrySet().removeIf(
-                entry -> entry.getKey().getId() > limit
-        );
-        javaClasses.removeIf(
-                javaClass -> javaClass.getRelease().getId() > limit
-        );
-        infoLog("after cut releases releases size=" + this.javaClassPerRelease.size() +
-                "java cut-classes size=" + this.javaClasses.size());
-        logBugPercentage();
-
-
-    }
-
-    private void logBugPercentage() {
-        AtomicLong bugCounter = new AtomicLong(0);
-        AtomicLong totalCounter = new AtomicLong(0);
-
-        this.javaClassPerRelease.entrySet().stream()
-                .sorted(Comparator.comparing(entry -> entry.getKey().getId()))
-                .forEach(entry -> {
-                    Release theRelease = entry.getKey();
-                    List<JavaClass> javaClassesForRelease = entry.getValue();
-
-                    String commitName = theRelease.getCommitList().stream().sorted(Comparator
-                                    .comparing(commit -> Date.from(
-                                            commit.getRevCommit().getCommitterIdent().getWhenAsInstant())))
-                            .toList().getLast().getRevCommit().getName();
-                    StringBuilder msg = new StringBuilder("{\"Release\": ")
-                            .append(theRelease.getId())
-                            .append("\"Commit\": ")
-                            .append(commitName)
-                            .append(", \"Bugs\": ");
-
-                    javaClassesForRelease.forEach(javaClass -> {
-                        bugCounter.addAndGet(javaClass.getMethodsMetrics().entrySet().stream()
-                                .filter(e -> e.getValue().isBug()).count());
-                        totalCounter.addAndGet(javaClass.getMethods().size());
-                    });
-
-                    msg.append(bugCounter.get());
-                    msg.append(", \"Total\": ").append(totalCounter.get());
-                    msg.append(", \"Percentage\": \"")
-                            .append(String.format("%.2f%%",
-                                    100.0 * (bugCounter.get() / Math.max(1.0, totalCounter.get()))))
-                            .append("\"}");
-                    bugCounter.set(0);
-                    totalCounter.set(0);
-                    infoLog(msg.toString());
-
-                });
-    }
-
-    /**
-     * Check method age relative current release
-     */
-    private void checkMethodAge() {
-        Map<String, Integer> methodFirstAppearance = new HashMap<>();
-        javaClassPerRelease.entrySet().stream()
-                .sorted(Comparator.comparing(entry -> entry.getKey().getId()))
-                .forEach(entry -> {
-                    Release release = entry.getKey();
-
-                    for (JavaClass javaClass : entry.getValue()) {
-                        for (String methodSig : javaClass.getMethodsMetrics().keySet()) {
-
-                            methodFirstAppearance.putIfAbsent(methodSig, release.getId());
-                        }
-                    }
-                });
-
-        javaClassPerRelease.forEach((release, classList) -> {
-            for (JavaClass jc : classList) {
-                for (Map.Entry<String, MethodMetrics> entry : jc.getMethodsMetrics().entrySet()) {
-                    String methodSig = entry.getKey();
-                    MethodMetrics metrics = entry.getValue();
-
-                    Integer firstAppearance = methodFirstAppearance.get(methodSig);
-                    if (firstAppearance != null) {
-                        int age = release.getId() - firstAppearance;
-                        metrics.setAge(age);
-                    }
-                }
-            }
-        });
-
-    }
-
-    /**
-     * Fan-in / Fan-out calculation method
-     */
-    private void checkMethodUsage() {
-        javaClassPerRelease.forEach((release, classes) -> {
-
-            // --- STEP 1: costruzione mappa caller -> callee ---
-            Map<String, Set<String>> methodCalls = new HashMap<>();
-
-            classes.forEach(jc -> {
-                final String className = jc.getClassName();
-                final CompilationUnit cu = StaticJavaParser.parse(jc.getClassBody());
-
-                cu.findAll(MethodDeclaration.class).forEach(methodDecl -> {
-                    final String callerSig = className + "." + JavaParserUtil.getSignature(methodDecl);
-                    final Set<String> callees = new HashSet<>();
-
-                    methodDecl.findAll(MethodCallExpr.class)
-                            .stream()
-                            .map(MethodCallExpr::getNameAsString)
-                            .forEach(callees::add);
-
-                    methodCalls.put(callerSig, callees);
-                });
-            });
-
-            // --- STEP 2: calcolo fan-out per ciascun metodo ---
-            classes.forEach(jc -> {
-                final String className = jc.getClassName();
-                jc.getMethodsMetrics().forEach((methodSig, mm) -> {
-                    final String fullMethodSig = className + "." + methodSig;
-                    final int fanOut = methodCalls.getOrDefault(fullMethodSig, Collections.emptySet()).size();
-                    mm.setFanOut(fanOut);
-                });
-            });
-
-            // --- STEP 3: calcolo fan-in (chi chiama chi) ---
-            classes.forEach(callerJc -> {
-                final CompilationUnit cu = StaticJavaParser.parse(callerJc.getClassBody());
-
-                cu.findAll(MethodDeclaration.class).forEach(methodDecl ->
-                        methodDecl.getBody().ifPresent(block ->
-                                block.findAll(MethodCallExpr.class).forEach(callStmt -> {
-                                    final String calleeName = callStmt.getNameAsString();
-                                    final int argCount = callStmt.getArguments().size();
-
-                                    classes.forEach(possibleCallee ->
-                                            possibleCallee.getMethodsMetrics().values().stream()
-                                                    .filter(mm -> Objects.equals(mm.getSimpleName(), calleeName)
-                                                            && mm.getParameterCount() == argCount)
-                                                    .forEach(mm -> mm.setFanIn(mm.getFanIn() + 1))
-                                    );
-                                })
-                        )
-                );
-            });
-
-        });
-    }
-
-    /**
-     * Use PMD to calculate codeSmells
-     */
-    private void setupCodeSmellPMD() {
-        String outputDirPath = PMD_ANALYSIS + File.separator + this.project;
-        File outputDir = new File(outputDirPath);
-
-        // Skip PMD if the output directory exists and contains enough files
-
-        if (outputDir.exists() && outputDir.isDirectory()) {
-            File[] existingFiles = outputDir.listFiles((dir, name) -> name.endsWith(".csv"));
-            if (existingFiles != null && existingFiles.length >= this.javaClassPerRelease.size()) {
-                return;
-            }
-        }
-        this.javaClassPerRelease.keySet()
-                .stream().sorted(Comparator.comparing(Release::getId)).forEach(
-                        release -> {
-
-                            if (release.getId() <= 1) {
-                                infoLog(RELEASE + " " + 0 + " starting");
-                                doPmd(0, release.getCommitList().getFirst().getRevCommit());
-                            }
-
-                            infoLog(RELEASE + " " + release.getId() + " starting");
-
-
-                            doPmd(release.getId(), release.getCommitList().getLast().getRevCommit());
-                        }
-                );
-    }
-
-    private void doPmd(int releaseId, @NotNull RevCommit commit) {
-        String commitId = commit.getName();
-        final String reportPath = PMD_ANALYSIS + File.separator + this.project + File.separator
-                + releaseId + ".csv";
-        if ((new File(reportPath).exists())) {
-            return;
-        }
-        try {
-            String msg = "do pmd for " + this.project + " previous " + RELEASE + " " + releaseId +
-                    " with commit " + commitId + " for next " + RELEASE + " " + (releaseId + 1);
-            SeLogger.getInstance().getLogger().info(msg);
-
-            this.localGithub.checkout().setForced(true).setName(commitId).call();
-
-        } catch (GitAPIException e) {
-            SeLogger.getInstance().getLogger().warning("Initial checkout failed for " + commitId + ": " + e.getMessage());
-            try {
-                // Ripristina lo stato del repo
-                cleanGitState();  // definita sotto
-                this.localGithub.reset().setMode(ResetCommand.ResetType.HARD).call();
-                this.localGithub.clean().setCleanDirectories(true).call();
-
-                // Retry checkout
-                this.localGithub.checkout().setForced(true).setName(commitId).call();
-
-            } catch (GitAPIException | IOException ex) {
-                String msg = commitId + " still has problems after reset: " + ex.getMessage();
-                SeLogger.getInstance().getLogger().severe(msg);
-            }
-        } finally {
-            restoreRepositoryState();
-        }
-        try {
-            Process process = getProcess(releaseId);
-            process.waitFor(5L, TimeUnit.MINUTES);
-            String msg = "done pmd " + this.project + " " + RELEASE + " " + releaseId;
-            SeLogger.getInstance().getLogger().info(msg);
-            process.destroy();
-        } catch (IOException ignored) {
-            // go next
-        } catch (InterruptedException e) {
-            String msg = "Some problem occurred here unexpected interruption " + this.project + " " + RELEASE + " " + releaseId;
-            SeLogger.getInstance().getLogger().info(msg);
-            Thread.currentThread().interrupt();
-        }
-    }
-
-
+    // --- helper per PMD/processi esterni (invariati logicamente) ---
     private void cleanGitState() throws IOException {
         String gitDir = repoPath + File.separator + ".git" + File.separator;
         String[] mergeFiles = {"MERGE_HEAD", "MERGE_MSG", "MERGE_MODE", "index"};
         for (String file : mergeFiles) {
             File f = new File(gitDir + file);
-            if (f.exists()) {
-                Files.delete(f.toPath());
-            }
+            if (f.exists()) Files.delete(f.toPath());
         }
     }
-
 
     @Contract("_ -> new")
     private @NotNull Process getProcess(int id) throws IOException {
@@ -693,256 +280,11 @@ public class GitInjection {
                 pmd,
                 "check",
                 "-d", this.repoPath,
-                "-R", Objects.requireNonNull(GitInjection.class
-                .getClassLoader()
-                .getResource("pmd/custom.xml")).getPath(),
+                "-R", Objects.requireNonNull(GitInjection.class.getClassLoader().getResource("pmd/custom.xml")).getPath(),
                 "-f", "csv",
                 "--no-cache",
                 "-r", reportPath
         ).redirectErrorStream(true).start();
-    }
-
-    private void updateMethodPerClassCommits() {
-        AtomicLong counter = new AtomicLong(0);
-        try {
-            this.javaClassPerRelease.forEach(
-                    (release, jc) -> jc.stream().filter(
-                            javaClass -> {
-                                if (javaClass.getClassCommits() != null) {
-                                    return javaClass.getClassCommits().size() > 1;
-                                }
-                                return false;
-                            }
-                    ).forEach(
-                            javaClass -> javaClass.getClassCommits().forEach(
-                                    commit -> {
-                                        if (!commit.equals(javaClass.getClassCommits().getLast())) {
-                                            moreClassInfo(javaClass, commit.getRevCommit());
-                                            counter.incrementAndGet();
-                                        }
-                                    }
-                            )
-                    )
-            );
-        } catch (NullPointerException ignored) {
-            // skip the class which has no commit
-        } finally {
-            restoreRepositoryState();
-        }
-        infoLog("updateMethodPerClassCommits commits: " + counter.get());
-    }
-
-    private void moreClassInfo(@NotNull JavaClass javaClass, @NotNull RevCommit revCommit) {
-        RevTree tree = revCommit.getTree();
-        TreeWalk treeWalk = new TreeWalk(repository);
-        try {
-            treeWalk.addTree(tree);
-            treeWalk.setRecursive(true);
-            treeWalk.setFilter(PathSuffixFilter.create(JAVA_EXTENTION));
-            while (treeWalk.next()) {
-                if (treeWalk.getPathString().contains(javaClass.getName())) {
-                    CompilationUnit cu = StaticJavaParser.parse(new String(repository
-                            .open(treeWalk.getObjectId(0))
-                            .getBytes(), StandardCharsets.UTF_8));
-                    cu.findAll(MethodDeclaration.class).forEach(
-                            methodDeclaration -> {
-                                String methodName = methodDeclaration.getDeclarationAsString();
-                                if (javaClass.getMethods().get(methodName) != null) {
-                                    methodDeclaration.getBody().ifPresent(
-                                            body -> calcDiff(javaClass, methodDeclaration, methodName, revCommit)
-                                    );
-                                }
-                            }
-                    );
-                }
-
-
-            }
-
-        } catch (IOException | ParseProblemException ipe) {
-            // ignoring this
-            errorLog(ipe.getClass().getSimpleName() + " problem with this javaClass in release: "
-                    + javaClass.getRelease().getId());
-        } catch (NullPointerException e) {
-            // ignoring this step
-            errorLog("java class: " + javaClass.getName() + " nullptr: " +
-                    e.getMessage());
-        }
-        treeWalk.close();
-    }
-
-
-    private static void calcDiff(@NotNull JavaClass javaClass, MethodDeclaration methodDeclaration,
-                                 String methodName, @NotNull RevCommit revCommit) {
-        String newBody = JavaParserUtil.getStringBody(methodDeclaration);
-        String oldBody = javaClass.getMethods().get(methodName);
-        if (!newBody.equals(oldBody)) {
-            int added = 0;
-            int removed = 0;
-            List<String> oldLines = Arrays.asList(oldBody.split("\n"));
-            List<String> newLines = Arrays.asList(newBody.split("\n"));
-            for (String line : newLines) {
-                if (!oldLines.contains(line)) added++;
-            }
-            for (String line : oldLines) {
-                if (!newLines.contains(line)) removed++;
-            }
-            javaClass.getMethodsMetrics().get(methodName).incChanges();
-            javaClass.getMethodsMetrics().get(methodName)
-                    .addChurn(added, removed);
-            javaClass.getMethodsMetrics().get(methodName).addAuthor(revCommit.getAuthorIdent().getName());
-        }
-    }
-
-    private void parseJavaClassPerRelease() {
-        this.javaClassPerRelease = new LinkedHashMap<>();
-        for (JavaClass javaClass : this.javaClasses) {
-            javaClassPerRelease.putIfAbsent(javaClass.getRelease(), new ArrayList<>());
-            javaClassPerRelease.get(javaClass.getRelease()).add(javaClass);
-        }
-    }
-
-
-    /**
-     * Adding all commits for a Release to a Class
-     */
-    private void checkUpdateInClassCommitted() throws IOException {
-        List<JavaClass> tempProjClasses;
-        for (Commit commit : this.commits) {
-            Release release = commit.getRelease();
-            tempProjClasses = new ArrayList<>(this.javaClasses);
-            tempProjClasses.removeIf(tempProjClass -> !tempProjClass.getRelease().equals(release));
-            List<String> modifiedClassesNames = this.getTouchedClassesNames(commit.getRevCommit());
-            for (String modifiedClass : modifiedClassesNames) {
-                for (JavaClass javaClass : tempProjClasses) {
-                    if ((javaClass.getName().equals(modifiedClass)) &&
-                            (!javaClass.getClassCommits().contains(commit))) {
-                        javaClass.addCommitToClass(commit);
-                    }
-                }
-            }
-        }
-    }
-
-    private void fillClassesInfo() throws IOException {
-        this.fillClassesInfo(this.tickets, this.javaClasses);
-    }
-
-    /**
-     * Checking if a class contains or not a bug
-     *
-     * @param theTickets jira Tickets
-     * @param theClasses all javaClasses
-     */
-    public void fillClassesInfo(List<Ticket> theTickets, @NotNull List<JavaClass> theClasses) throws IOException {
-        for (JavaClass javaClass : theClasses) {
-            javaClass.getMetrics().setBug(false);
-        }
-
-        for (Ticket ticket : theTickets) {
-            List<Commit> commitsContainingTicket = ticket.getCommitList();
-            Release injectedVersion = ticket.getInjectedVersion();
-            for (Commit commit : commitsContainingTicket) {
-                SimpleDateFormat formatter = new SimpleDateFormat(GitInjection.LOCAL_DATE_FORMAT);
-                RevCommit revCommit = commit.getRevCommit();
-                LocalDate commitDate = LocalDate.parse(formatter.format(
-                        Date.from(revCommit.getCommitterIdent().getWhenAsInstant())));
-                if (!commitDate.isAfter(ticket.getResolutionDate())
-                        && !commitDate.isBefore(ticket.getCreationDate())) {
-                    List<String> modifiedClassesNames = getTouchedClassesNames(revCommit);
-                    Release releaseOfCommit = commit.getRelease();
-                    modifiedClassesForCommit.putIfAbsent(revCommit, modifiedClassesNames);
-                    for (String modifiedClass : modifiedClassesNames) {
-                        checkForAnyBug(modifiedClass, injectedVersion, releaseOfCommit);
-                    }
-
-                }
-            }
-        }
-    }
-
-    /**
-     * Check if a class or method contains a bug
-     *
-     * @param modifiedClass   all classes modified in that Release
-     * @param injectedVersion the injected version of the bug
-     * @param fixedVersion    the fixed version of the bug
-     */
-
-    private void checkForAnyBug(String modifiedClass, Release injectedVersion, Release fixedVersion) {
-        // by marking the class as a buggy, this can be removed
-
-        List<JavaClass> fixedClasses = this.javaClasses.stream().filter(javaClass -> javaClass.getRelease().getId()
-                == fixedVersion.getId()).toList();
-
-        for (JavaClass javaClass : this.javaClasses) {
-            if (javaClass.getName().equals(modifiedClass)
-                    && javaClass.getRelease().getId() < fixedVersion.getId()
-                    && javaClass.getRelease().getId() >= injectedVersion.getId()) {
-                javaClass.getMetrics().setBug(true);
-                javaClass.getMethods().entrySet().forEach(entry ->
-                        fixedClasses.stream().filter(jc -> jc.getName().equals(modifiedClass)).findAny().ifPresent(
-                                fixedClass -> {
-                                    Map<String, String> methodMap = fixedClass.getMethods();
-                                    checkMethodDiff(javaClass, entry, methodMap);
-                                }
-                        ));
-
-            }
-        }
-
-    }
-
-    private static void checkMethodDiff(JavaClass javaClass, Map.Entry<String, String> entry,
-                                        Map<String, String> methodMap) {
-
-        MethodMetrics metrics = javaClass.getMethodsMetrics().get(entry.getKey());
-        if (metrics == null) {
-            // Se non esiste, lo creo e lo aggiungo
-            metrics = new MethodMetrics();
-            javaClass.getMethodsMetrics().put(entry.getKey(), metrics);
-        }
-
-        if (!methodMap.containsKey(entry.getKey())) {
-            metrics.setBug(true);
-        } else {
-            String fixedBody = methodMap.get(entry.getKey());
-            String oldBody = entry.getValue();
-            if (!fixedBody.equals(oldBody)) {
-                metrics.setBug(true);
-            }
-        }
-    }
-
-    /**
-     * Check which class is touched in a commit
-     *
-     * @param commit the commit id
-     * @return all classes touched in a commit
-     */
-
-    private @NotNull List<String> getTouchedClassesNames(@NotNull RevCommit commit) throws IOException {
-        List<String> touchedClassesNames = new ArrayList<>();
-        try (DiffFormatter diffFormatter = new DiffFormatter(DisabledOutputStream.INSTANCE);
-             ObjectReader reader = repository.newObjectReader()) {
-            CanonicalTreeParser newTreeIter = new CanonicalTreeParser();
-            ObjectId newTree = commit.getTree();
-            newTreeIter.reset(reader, newTree);
-            RevCommit commitParent = commit.getParent(0);
-            CanonicalTreeParser oldTreeIter = new CanonicalTreeParser();
-            ObjectId oldTree = commitParent.getTree();
-            oldTreeIter.reset(reader, oldTree);
-            diffFormatter.setRepository(repository);
-            List<DiffEntry> entries = diffFormatter.scan(oldTreeIter, newTreeIter);
-            for (DiffEntry entry : entries) {
-                if (entry.getNewPath().contains(JAVA_EXTENTION) && !entry.getNewPath().contains("/test/")) {
-                    touchedClassesNames.add(entry.getNewPath());
-                }
-            }
-        } catch (ArrayIndexOutOfBoundsException ignored) {
-            //ignoring when no parent is found
-        }
-        return touchedClassesNames;
     }
 
     public List<Commit> getCommitsWithIssues() {
@@ -991,20 +333,20 @@ public class GitInjection {
 
     public Map<String, String> getMapTickets() {
         Map<String, String> mapTickets = new HashMap<>();
-        this.tickets.sort(Comparator.comparing(Ticket::getCreationDate));
-        for (Ticket ticket : this.tickets) {
+        if (this.tickets != null) this.tickets.sort(Comparator.comparing(Ticket::getCreationDate));
+        for (Ticket ticket : Optional.ofNullable(this.tickets).orElse(Collections.emptyList())) {
             List<String> ids = new ArrayList<>();
-            for (Release release : ticket.getAffectedVersions()) {
+            for (Release release : Optional.ofNullable(ticket.getAffectedVersions()).orElse(Collections.emptyList())) {
                 ids.add(release.getReleaseName());
             }
             Map<String, String> inner = new LinkedHashMap<>();
-            inner.put("injectedVersion", ticket.getInjectedVersion().toString());
-            inner.put("openingVersion", ticket.getOpeningVersion().toString());
-            inner.put("fixedVersion", ticket.getFixedVersion().toString());
+            inner.put("injectedVersion", ticket.getInjectedVersion() != null ? ticket.getInjectedVersion().toString() : "null");
+            inner.put("openingVersion", ticket.getOpeningVersion() != null ? ticket.getOpeningVersion().toString() : "null");
+            inner.put("fixedVersion", ticket.getFixedVersion() != null ? ticket.getFixedVersion().toString() : "null");
             inner.put("affectedVersions", ids.toString());
-            inner.put("commits", String.valueOf(ticket.getCommitList().size()));
-            inner.put("creationDate", ticket.getCreationDate().toString());
-            inner.put("resolutionDate", ticket.getResolutionDate().toString());
+            inner.put("commits", String.valueOf(Optional.ofNullable(ticket.getCommitList()).map(List::size).orElse(0)));
+            inner.put("creationDate", ticket.getCreationDate() != null ? ticket.getCreationDate().toString() : "null");
+            inner.put("resolutionDate", ticket.getResolutionDate() != null ? ticket.getResolutionDate().toString() : "null");
             mapTickets.put(ticket.getTicketKey(), inner.toString());
         }
 
@@ -1013,19 +355,15 @@ public class GitInjection {
 
     public Map<String, String> getMapCommits() {
         Map<String, String> mapCommits = new HashMap<>();
-        for (Commit commit : this.commits) {
+        for (Commit commit : Optional.ofNullable(this.commits).orElse(Collections.emptyList())) {
             Map<String, String> inner = new LinkedHashMap<>();
             RevCommit revCommit = commit.getRevCommit();
             Ticket ticket = commit.getTicket();
             Release release = commit.getRelease();
-            if (ticket != null) {
-                inner.put("ticketKey", commit.getTicket().getTicketKey());
-            }
-            inner.put(RELEASE, release.getReleaseName());
-            inner.put("creationDate",
-                    String.valueOf(LocalDate.parse((new SimpleDateFormat(GitInjection.LOCAL_DATE_FORMAT)
-                            .format(Date.from(revCommit.getCommitterIdent().getWhenAsInstant()))
-                    ))));
+            if (ticket != null) inner.put("ticketKey", commit.getTicket().getTicketKey());
+            inner.put(RELEASE, release != null ? release.getReleaseName() : "null");
+            inner.put("creationDate", String.valueOf(LocalDate.parse((new SimpleDateFormat(LOCAL_DATE_FORMAT)
+                    .format(Date.from(revCommit.getCommitterIdent().getWhenAsInstant()))))));
             mapCommits.put(revCommit.getName(), inner.toString());
         }
         return mapCommits;
@@ -1033,35 +371,101 @@ public class GitInjection {
 
     public Map<String, String> getMapSummary() {
         Map<String, String> summaryMap = new HashMap<>();
-        summaryMap.put("Releases", String.valueOf(this.releases.size()));
-        summaryMap.put("Tickets", String.valueOf(this.tickets.size()));
-        summaryMap.put("Commits", String.valueOf(this.commits.size()));
-        summaryMap.put("Commits with bugs", String.valueOf(this.commitsWithIssues.size()));
+        summaryMap.put("Releases", String.valueOf(Optional.ofNullable(this.releases).map(List::size).orElse(0)));
+        summaryMap.put("Tickets", String.valueOf(Optional.ofNullable(this.tickets).map(List::size).orElse(0)));
+        summaryMap.put("Commits", String.valueOf(Optional.ofNullable(this.commits).map(List::size).orElse(0)));
+        summaryMap.put("Commits with bugs", String.valueOf(Optional.ofNullable(this.commitsWithIssues).map(List::size).orElse(0)));
         return summaryMap;
     }
 
     private void restoreRepositoryState() {
         if (lastBranch == null) {
-            errorLog("No branch to restore to");
+            logWarning(() -> "No branch to restore to");
             return;
         }
         try {
-            // reset e clean
-            localGithub.reset()
-                    .setMode(ResetCommand.ResetType.HARD)
-                    .call();
-            localGithub.clean()
-                    .setCleanDirectories(true)
-                    .call();
+            // reset and clean
+            localGithub.reset().setMode(ResetCommand.ResetType.HARD).call();
+            localGithub.clean().setCleanDirectories(true).call();
 
-            // torna al branch salvato
-            localGithub.checkout()
-                    .setName(lastBranch)
-                    .call();
+            // checkout back to saved branch
+            localGithub.checkout().setName(lastBranch).call();
 
-            infoLog("Repository restored to branch " + lastBranch + " at HEAD");
+            logInfo(() -> "Repository restored to branch " + lastBranch + " at HEAD");
         } catch (GitAPIException e) {
-            errorLog("reset the repo: " + e.getMessage());
+            logError(() -> "reset the repo: " + e.getMessage());
         }
+    }
+
+    public void setTickets(List<Ticket> tickets) {
+        this.tickets = tickets;
+    }
+
+    public void setCommits(List<Commit> commits) {
+        this.commits = commits;
+    }
+
+    public List<Ticket> getTickets() {
+        return tickets;
+    }
+
+    public List<Release> getReleases() {
+        return releases;
+    }
+
+    public Repository getRepository() {
+        return repository;
+    }
+
+    public List<Commit> getCommits() {
+        return commits;
+    }
+
+    public Map<Release, List<JavaClass>> getJavaClassPerRelease() {
+        return javaClassPerRelease;
+    }
+
+    public String getProject() {
+        return project;
+    }
+
+    public Logger getLogger() {
+        return logger;
+    }
+
+    public String getLogName() {
+        return logName;
+    }
+
+    // --- logging helpers (lazy suppliers to avoid expensive concat) ---
+    private void logInfo(Supplier<String> msgSupplier) {
+        if (logger.isLoggable(Level.INFO)) logger.info(msgSupplier.get());
+    }
+    private void logWarning(Supplier<String> msgSupplier) {
+        if (logger.isLoggable(Level.WARNING)) logger.warning(msgSupplier.get());
+    }
+    private void logError(Supplier<String> msgSupplier) {
+        if (logger.isLoggable(Level.SEVERE)) logger.severe(msgSupplier.get());
+    }
+
+    private Release findReleaseForCommit(LocalDateTime commitDateTime, List<Release> releases) {
+        int left = 0;
+        int right = releases.size() - 1;
+        Release result = null;
+
+        while (left <= right) {
+            int mid = (left + right) / 2;
+            Release midRelease = releases.get(mid);
+            LocalDateTime releaseDateTime = midRelease.getReleaseDate().atStartOfDay();
+
+            if (!commitDateTime.isAfter(releaseDateTime)) {
+                result = midRelease;
+                right = mid - 1;
+            } else {
+                left = mid + 1;
+            }
+        }
+
+        return result;
     }
 }
